// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1>
        Change Keywords
      </h1>
      <form
        class="modal-form"
      >
        <div
          class="row mb-3"
        >
          <label
            class="col-sm-5 col-form-label"
            for="diagnosis"
          >
            Diagnosis
          </label>
          <div
            class="col-sm-7"
          >
            <input
              class="form-control"
              disabled=""
              id="diagnosis"
              name="diagnosis"
              required=""
              type="text"
              value=""
            />
          </div>
          <label
            class="col-sm-5 col-form-label"
            for="currentKeywords"
          >
            Current Keywords
          </label>
          <div
            class="col-sm-7"
          >
            <textarea
              class="textarea form-control"
              disabled=""
              id="currentKeywords"
              name="currentKeywords"
              required=""
            />
          </div>
          <label
            class="col-sm-5 col-form-label"
            for="keywords"
          >
            New Keywords
          </label>
          <div
            class="col-sm-7"
          >
            <input
              class="form-control"
              id="keywords"
              name="keywords"
              placeholder="new keywords"
              type="text"
              value=""
            />
          </div>
          <div
            class="notes"
          >
            Add any keywords you would like to be included in the PubMed database search.
          </div>
        </div>
        <div
          class="modal-foot"
        >
          <button
            class="modal-button submit-button btn btn-primary"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1>
      Change Keywords
    </h1>
    <form
      class="modal-form"
    >
      <div
        class="row mb-3"
      >
        <label
          class="col-sm-5 col-form-label"
          for="diagnosis"
        >
          Diagnosis
        </label>
        <div
          class="col-sm-7"
        >
          <input
            class="form-control"
            disabled=""
            id="diagnosis"
            name="diagnosis"
            required=""
            type="text"
            value=""
          />
        </div>
        <label
          class="col-sm-5 col-form-label"
          for="currentKeywords"
        >
          Current Keywords
        </label>
        <div
          class="col-sm-7"
        >
          <textarea
            class="textarea form-control"
            disabled=""
            id="currentKeywords"
            name="currentKeywords"
            required=""
          />
        </div>
        <label
          class="col-sm-5 col-form-label"
          for="keywords"
        >
          New Keywords
        </label>
        <div
          class="col-sm-7"
        >
          <input
            class="form-control"
            id="keywords"
            name="keywords"
            placeholder="new keywords"
            type="text"
            value=""
          />
        </div>
        <div
          class="notes"
        >
          Add any keywords you would like to be included in the PubMed database search.
        </div>
      </div>
      <div
        class="modal-foot"
      >
        <button
          class="modal-button submit-button btn btn-primary"
        >
          Save
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`matches the snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`matches the snapshot 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1>
        Change Keywords
      </h1>
      <form
        class="modal-form"
      >
        <div
          class="row mb-3"
        >
          <label
            class="col-sm-5 col-form-label"
            for="diagnosis"
          >
            Diagnosis
          </label>
          <div
            class="col-sm-7"
          >
            <input
              class="form-control"
              disabled=""
              id="diagnosis"
              name="diagnosis"
              required=""
              type="text"
              value=""
            />
          </div>
          <label
            class="col-sm-5 col-form-label"
            for="currentKeywords"
          >
            Current Keywords
          </label>
          <div
            class="col-sm-7"
          >
            <textarea
              class="textarea form-control"
              disabled=""
              id="currentKeywords"
              name="currentKeywords"
              required=""
            />
          </div>
          <label
            class="col-sm-5 col-form-label"
            for="keywords"
          >
            New Keywords
          </label>
          <div
            class="col-sm-7"
          >
            <input
              class="form-control"
              id="newKeywords"
              name="newKeywords"
              placeholder="new keywords"
              type="text"
              value=""
            />
          </div>
          <div
            class="notes"
          >
            Add any keywords you would like to be included in the PubMed database search.
          </div>
        </div>
        <div
          class="modal-foot"
        >
          <button
            class="modal-button submit-button btn btn-primary"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1>
      Change Keywords
    </h1>
    <form
      class="modal-form"
    >
      <div
        class="row mb-3"
      >
        <label
          class="col-sm-5 col-form-label"
          for="diagnosis"
        >
          Diagnosis
        </label>
        <div
          class="col-sm-7"
        >
          <input
            class="form-control"
            disabled=""
            id="diagnosis"
            name="diagnosis"
            required=""
            type="text"
            value=""
          />
        </div>
        <label
          class="col-sm-5 col-form-label"
          for="currentKeywords"
        >
          Current Keywords
        </label>
        <div
          class="col-sm-7"
        >
          <textarea
            class="textarea form-control"
            disabled=""
            id="currentKeywords"
            name="currentKeywords"
            required=""
          />
        </div>
        <label
          class="col-sm-5 col-form-label"
          for="keywords"
        >
          New Keywords
        </label>
        <div
          class="col-sm-7"
        >
          <input
            class="form-control"
            id="newKeywords"
            name="newKeywords"
            placeholder="new keywords"
            type="text"
            value=""
          />
        </div>
        <div
          class="notes"
        >
          Add any keywords you would like to be included in the PubMed database search.
        </div>
      </div>
      <div
        class="modal-foot"
      >
        <button
          class="modal-button submit-button btn btn-primary"
        >
          Save
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`matches the snapshot 4`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1>
        Change Keywords
      </h1>
      <form
        class="modal-form"
      >
        <div
          class="row mb-3"
        >
          <label
            class="col-sm-5 col-form-label"
            for="diagnosis"
          >
            Diagnosis
          </label>
          <div
            class="col-sm-7"
          >
            <input
              class="form-control"
              disabled=""
              id="diagnosis"
              name="diagnosis"
              required=""
              type="text"
              value=""
            />
          </div>
          <label
            class="col-sm-5 col-form-label"
            for="currentKeywords"
          >
            Current Keywords
          </label>
          <div
            class="col-sm-7"
          >
            <textarea
              class="textarea form-control"
              disabled=""
              id="currentKeywords"
              name="currentKeywords"
              required=""
            />
          </div>
          <label
            class="col-sm-5 col-form-label"
            for="newKeywords"
          >
            New Keywords
          </label>
          <div
            class="col-sm-7"
          >
            <input
              class="form-control"
              id="newKeywords"
              name="newKeywords"
              placeholder="new keywords"
              type="text"
              value=""
            />
          </div>
          <div
            class="notes"
          >
            Add any keywords you would like to be included in the PubMed database search.
          </div>
        </div>
        <div
          class="modal-foot"
        >
          <button
            class="modal-button submit-button btn btn-primary"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1>
      Change Keywords
    </h1>
    <form
      class="modal-form"
    >
      <div
        class="row mb-3"
      >
        <label
          class="col-sm-5 col-form-label"
          for="diagnosis"
        >
          Diagnosis
        </label>
        <div
          class="col-sm-7"
        >
          <input
            class="form-control"
            disabled=""
            id="diagnosis"
            name="diagnosis"
            required=""
            type="text"
            value=""
          />
        </div>
        <label
          class="col-sm-5 col-form-label"
          for="currentKeywords"
        >
          Current Keywords
        </label>
        <div
          class="col-sm-7"
        >
          <textarea
            class="textarea form-control"
            disabled=""
            id="currentKeywords"
            name="currentKeywords"
            required=""
          />
        </div>
        <label
          class="col-sm-5 col-form-label"
          for="newKeywords"
        >
          New Keywords
        </label>
        <div
          class="col-sm-7"
        >
          <input
            class="form-control"
            id="newKeywords"
            name="newKeywords"
            placeholder="new keywords"
            type="text"
            value=""
          />
        </div>
        <div
          class="notes"
        >
          Add any keywords you would like to be included in the PubMed database search.
        </div>
      </div>
      <div
        class="modal-foot"
      >
        <button
          class="modal-button submit-button btn btn-primary"
        >
          Save
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
